# smart-ebook-chat-system

./: .gitignore  PROJECT_STATUS.md  README.md  main.py  pyproject.toml  test_task9_semantic_search.py
.cursor/rules/: extending.mdc
.taskmaster/: PRD.md
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  tasks.json  tasks.json.bak
app/: main.py
app/core/: config.py
backend/: .dockerignore  DEPLOYMENT.md  Dockerfile  Makefile  SECURITY.md  alembic.ini  chat_test_report.json  comprehensive_system_test.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  env.dev  env.example  env.prod  env.staging  final_system_report.json  performance_monitor.py  pyproject.toml  security-requirements.txt  system_status_report.py  test.txt  test_chat_interface.py  test_llm_providers.py  test_report_1749444763.json  test_report_1749444921.json  test_report_1749445185.json  test_report_1749445263.json  test_report_1749445300.json  test_report_1749445346.json  test_report_1749445368.json  test_report_1749445455.json  test_report_1749445505.json  test_report_1749445656.json  test_vector_indexing.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 08bf33c4423a_initial_migration.py  19980b5ea2b0_add_chat_models.py  7f92e80a9586_add_subscription_models_and_fix_.py  add_vector_indexing_fields.py  af3a7a696a8a_add_document_model.py  b1563f032a4a_fix_chat_metadata_column_names.py  cf7a0be5fa53_create_chat_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  llm_startup.py  security.py  vulnerability_scanner.py
backend/app/crud/: __init__.py  crud_document.py  crud_user.py
backend/app/db/: base.py  session.py
backend/app/middleware/: __init__.py  quota_middleware.py  security.py
backend/app/models/: __init__.py  api_key.py  chat.py  document.py  subscription.py  user.py
backend/app/routers/: auth.py  chat.py  documents.py  llm_providers.py  processing_status.py  security.py  subscription.py  users.py  vector_search.py
backend/app/schemas/: __init__.py  chat.py  document.py  subscription.py  user.py
backend/app/scripts/: init_subscription_tiers.py
backend/app/services/: api_key_encryption.py  api_key_service.py  chat_service.py  chunking.py  content_preprocessing.py  context_construction.py  document_format_detection.py  embeddings.py  metadata_enrichment.py  processing_status_tracker.py  quota_tracking.py  reranker.py  search_analytics.py  storage.py  vector_storage.py
backend/app/services/llm_providers/: __init__.py  base_provider.py  claude_provider.py  cost_calculator.py  gemini_provider.py  openai_provider.py  provider_factory.py  token_counter.py
backend/app/workers/: __init__.py  celery_app.py  document_conversion.py  document_pipeline.py  enhanced_document_conversion.py  vector_indexing.py
backend/k8s/: README.md
backend/k8s/base/: backend-deployment.yaml  celery-deployment.yaml  configmap.yaml  database-deployments.yaml  frontend-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  persistent-volumes.yaml  rbac.yaml  secrets.yaml
backend/k8s/overlays/production/: ingress-patch.yaml  kustomization.yaml  replica-patch.yaml  resource-patch.yaml
backend/scripts/: docker-startup.sh
backend/tests/: README.md  __init__.py  conftest.py  run_tests.py
backend/tests/e2e/: __init__.py
backend/tests/integration/: __init__.py  test_auth_api.py
backend/tests/performance/: __init__.py  locustfile.py
backend/tests/unit/: __init__.py  test_security.py
backend/tests/utils/: __init__.py  factories.py
docs/api/: README.md
docs/operations/: monitoring.md
docs/user-guide/: faq.md  features.md  getting-started.md  troubleshooting.md
my-gatsby-site/: .dockerignore  Dockerfile  Dockerfile.simple  gatsby-config.js  nginx.conf  package-lock.json  package.json
my-gatsby-site/src/components/: ApiKeyManager.js  ChatControls.js  ChatInterface.js  ChatPanel.js  ContextManager.js  DocumentBulkActions.js  DocumentList.js  DocumentManager.js  DocumentPreview.js  DocumentPreviewModal.js  DocumentUploadModal.js  FileUpload.js  FileUploadInterface.css  FileUploadInterface.js  GlobalUsageIndicator.js  GmailLayout.js  GmailNavigation.js  NotificationSystem.css  NotificationSystem.js  SearchAutocomplete.js  SearchInterface.css  SearchInterface.js  SecureKeyInput.js  SettingsDrawer.js  SettingsManager.js  SubscriptionDashboard.css  SubscriptionDashboard.js  SubscriptionPlans.css  SubscriptionPlans.js  SubscriptionUpgradeFlow.css  SubscriptionUpgradeFlow.js  TierComparison.js  UploadUsageGuard.js  UsageIndicator.css  UsageIndicator.js  UsageIndicatorDemo.css  UsageIndicatorDemo.js  UsageProvider.js  header.js
my-gatsby-site/src/hooks/: useDebounce.js
my-gatsby-site/src/pages/: api-key-demo.js  app.js  chat-demo.js  (+13 more)
