[tool.poetry]
name = "secs-backend"
version = "0.1.0"
description = "Backend for the Smart eBook Chat System"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
celery = "^5.3.6"
redis = "^5.0.4"
psycopg2-binary = "^2.9.9" # For PostgreSQL
qdrant-client = "^1.8.0" # For Qdrant
boto3 = "^1.34.100" # For S3/MinIO

# Text processing and extraction dependencies
markitdown = "^0.0.1" # For document conversion
langchain-text-splitters = "^0.2.0" # For text chunking
tiktoken = "^0.7.0" # For token counting

# Optional advanced extraction libraries
pymupdf = {version = "^1.23.0", optional = true} # For advanced PDF extraction
python-docx = {version = "^1.1.0", optional = true} # For advanced DOCX extraction
ebooklib = {version = "^0.18", optional = true} # For EPUB extraction
beautifulsoup4 = {version = "^4.12.0", optional = true} # For HTML parsing in EPUB
python-magic = {version = "^0.4.27", optional = true} # For file type detection
ftfy = {version = "^6.1.0", optional = true} # For text encoding fixes

[tool.poetry.extras]
advanced_extraction = ["pymupdf", "python-docx", "ebooklib", "beautifulsoup4", "python-magic", "ftfy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
