[tool.poetry]
name = "secs-backend"
version = "0.1.0"
description = "Backend for the Smart eBook Chat System"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
celery = "^5.3.6"
redis = "^5.0.4"
psycopg2-binary = "^2.9.9" # For PostgreSQL
qdrant-client = "^1.8.0" # For Qdrant
boto3 = "^1.34.100" # For S3/MinIO
python-jose = {extras = ["cryptography"], version = "^3.3.0"} # For JWT
passlib = {extras = ["bcrypt"], version = "^1.7.4"} # For password hashing
python-multipart = "^0.0.9" # For form data
markitdown = {extras = ["all"], version = "^0.1.2"} # For document conversion
openai = "^1.52.0" # For embeddings API
tiktoken = "^0.8.0" # For token counting
langchain-text-splitters = "^0.3.2" # For text chunking
sentence-transformers = "^3.0.1" # For BGE reranker

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 